css/obBase.css
/* ... */
input,
input[type="text"],
input[type="number"],
input[type="email"],
input[type="url"],
select,
textarea {
  border: none;
  color: #000;
  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
  font-size: 14px;
  font-weight: 500;
  font-family: "Helvetica Neue", Helvetica, Arial, Sans-Serif;
}

input[type=range]{
  -webkit-appearance: none;
}

input[type=range]::-webkit-slider-runnable-track {
  width: 90%;
  height: 6px;
  background: #ccc;
  border: none;
  border-radius: 4px;
}

input[type=range]::-webkit-slider-thumb {
  -webkit-appearance: none;
  border: #777;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  background: #eee;
  margin-top: -4px;
}

input[type=range]:focus {
  outline: none;
}

input[type=range]:focus::-webkit-slider-runnable-track {
  background: rgba(255,255,255,0.9);
}

textarea {
  background: none;
  outline: none;
  appearance: none;
  -webkit-appearance: none;
  width: 100%;
  resize: none;
  box-sizing: border-box;
  border: 1px solid transparent;
  transition: border 0.3s;
}

textarea:focus {
  border: 1px solid #fff;
  outline: none;
}

form {
  margin: 0;
}


/*========== structure classes ==========*/

#content {
  margin: auto;
  position: relative;
  width: 950px;
  z-index: 1;
}

#obContainer {
  transition: width 0.5s ease;
  width: calc(100% - 47px);

}

#obContainer.compressed {
  width: calc(100% - 231px);
}

#pageNav {
  position: fixed;
  top: 0;
  -webkit-app-region: drag;
  z-index: 3;
}


.pageNavContainer {
  width: 100%;
  z-index: 3;
}

#pageNav .btn {
  -webkit-app-region: no-drag;
}

#pageNav .navBar.bar {
  padding: 10px 8px;
}

#pageNav .modal-about .navBar.bar {
  padding: 0;
}

.navMoreButtons {
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  min-height: 80px;
  padding: 10px;
  position: absolute;
  right: 10px;
  top: 41px;
}

#sideBar {
  position: fixed;
  right: -183px;
  top: 50px;
  width:230px;
  background-color: #252525;
  border-left: 0;
  height: calc(100% - 50px);
  z-index: 999;
  transition: right 0.5s ease;
  color: #DDD;
  -webkit-app-region: no-drag;
}

#sideBar.sideBarSlid {
  right: 0px;
}

#sideBar .sideBarSlidShow {
  opacity: 0;
  transition: opacity 1s;
}

#sideBar.sideBarSlid .sideBarSlidShow {
  opacity: 1;
}

#sideBar input::-webkit-input-placeholder {
  color: #fff;
}

#sideBar.btn {
  color: #fff;
}

.chatSearch {
  margin-left: 41px;
}

.chatRead {
  opacity: .5;
}

.mainContainer {
  background-color: #063753;
  position: relative;
  min-height: 740px;
  margin-bottom: 50px;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
  z-index: 1;
  box-shadow: 0px 10px 20px #05283C;
}

.img-rsp {
  display: block;
  max-width: 100%;
  height: auto;
}

.bar {
  height: 50px;
  padding-left: 15px;
  padding-right: 15px;
}

.bar.barFlush {
  padding-left: 0;
  padding-right: 0;
}

.barTxt {
  height: 50px;
  line-height: 50px;
}

.bar .btn {
  float: left;
}

#overlay,
.overlay {
  position: fixed;
  top: 50px;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: rgba(25,25,25,0.85);
  z-index: 3;
  transition: all .25s cubic-bezier(0, 0, 0.2, .5);
}

.overlayObscurring {
  background-color: rgba(25,25,25,0.95);
}

.navBar {
  /* use for horizontal nav structures */
  display: flex;
  align-items: center;
  width: 100%;
  padding-top: 10px;
  padding-bottom: 10px;
  box-sizing: border-box;
}

.navBar-main {
  position: fixed;
  top: 0;
  left: 0;
}

.footerBar {
  padding: 3px 0;
}

.navBar .navEnd {
  /* container for nav elements on the right side */
  display: flex;
  flex-grow: 1;
  justify-content: flex-end;
}

.ctrlGroup {
  /* use for any cluster of nav controls */
  padding-left: 4px;
  position: relative;
}

.ctrlGroup .btn {
  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);

}

.ctrlGroup:first-child {
  padding-left: 0;
}

.flexContainer {
  overflow: hidden;
}

.flexRow {
  display: flex;
  align-content: flex-start;
  flex-wrap: wrap;
  width: 100%;
  /* reset styles if applied to a list item */
  padding: 0;
}

.flexRow.noFlexWrap {
  /* temporary until all the flexRows with wrap are fixed */
  flex-wrap: nowrap;
}

.flexSizeFixed {
  flex-shrink: 0;
}

.flexRow-center {
  justify-content: center;
}

.flexRow [class |= "flexCol"] {
  box-sizing: border-box;
  position: relative;
}

.flexRow.pad [class |= "flexCol"] {
  padding-left: 5px;
  padding-right: 5px;
}

.flexRow.pad [class |= "flexCol"]:first-child {
  padding-left: 0;
}

.flexRow.pad [class |= "flexCol"]:last-child {
  padding-right: 0;
}

.flexRow.negPad {
  /* use to compensate for first and last margins to items in the row if you can't use flex justification */
  margin: 0 -5px 0 -10px;
  width: auto;
}

.flexRow .flexCol-12 {
  /* normally you can make it 100% wide by not using a column. This is here if you need to switch column sizes dynamically. */
  width: 100%;
}

.flexRow .flexCol-11,
.flexRow .flexCol-11 { flex-basis: 91.66666666666666%; }

.flexRow .flexCol-10 { flex-basis: 83.33333333333334%; }

.flexRow .flexCol-9 { flex-basis: 75%; }

.flexRow .flexCol-8 { flex-basis: 66.66666666666666%; }

.flexRow .flexCol-7 { flex-basis: 58.333333333333336%; }

.flexRow .flexCol-6 { flex-basis: 50%; }

.flexRow .flexCol-5 { flex-basis: 41.66666666666667%; }

.flexRow .flexCol-4 { flex-basis: 33.33333333333333%; }

.flexRow .flexCol-3 { flex-basis: 25%; }

.flexRow .flexCol-2 { flex-basis: 16.666666666666664%;; }

.flexRow .flexCol-1 { flex-basis: 8.333333333333332%; }

.flexExpand {
  /* use to make only one item in a flex row expand */
  flex-grow: 1;
}

.gridItemControls {
  background: #106DA3;
  position: absolute;
  opacity: 0;
  bottom: 0;
  left: 1px;
  height: 40px;
  line-height: 38px;
  border-top: solid 1px #327EB8;
  border-right: solid 1px #327EB8;
  width: 316px;
  padding: 0;
  box-sizing: border-box;
  transition: opacity .5s cubic-bezier(0, 0, 0.2, 1);
}
/* ... */

